assets/css/main.css
/* ... */
    @media (max-width: 768px) {
      .jackpot-wrap {
        width: 100%;
        height: auto;
        text-align: center; } }
  .jackpot-content {
    z-index: 1; }
    @media (max-width: 768px) {
      .jackpot-content {
        width: 100%; } }
  .jackpot__wrapper {
    position: relative;
    padding-top: 140px;
    padding-bottom: 95px; }
    @media (max-width: 768px) {
      .jackpot__wrapper {
        text-align: center; } }
  .jackpot__header {
    margin-bottom: 20px;
    font-size: 80px;
    line-height: 80px;
    white-space: pre; }
    @media (max-width: 768px) {
      .jackpot__header {
        font-size: 36px;
        line-height: 40px; } }
  .jackpot__underheader {
    margin-bottom: 40px;
    font-size: 37px;
    color: #aeaeae;
    text-transform: uppercase; }
    @media (max-width: 768px) {
      .jackpot__underheader {
        font-size: 20px; } }
  .jackpot__button {
    padding: 30px 65px;
    background-color: #ed383f;
    font-family: SFUIBold;
    font-size: 18px; }
    .jackpot__button:hover {
      background-color: #de3137; }
  .jackpot__background-text {
    position: absolute;
    top: -10px;
    left: 0;
    font-size: 12em;
    color: #000; }
    @media (max-width: 768px) {
      .jackpot__background-text {
        top: 40px;
        font-size: 5em; } }
  .jackpot__image-wrapper {
    height: 100%; }
    @media (max-width: 768px) {
      .jackpot__image-wrapper {
        display: none; } }
  .jackpot__image {
    height: 100%;
    position: relative; }

.last-winners {
  padding: 80px 0;
  background-color: #2b2b2b; }
  @media (max-width: 768px) {
    .last-winners {
      padding-top: 20px;
      padding-bottom: 60px; } }
  .last-winners__header {
    margin-bottom: 40px;
    font-family: SFUIHeavy;
    font-size: 24px;
    text-transform: uppercase; }
    @media (max-width: 768px) {
      .last-winners__header {
        font-size: 18px;
        text-align: center; } }
  .last-winners__button {
    width: 280px;
    padding: 25px;
    background-color: #ed383f;
    font-family: SFUIBold;
    font-size: 18px;
    line-height: 18px; }
    .last-winners__button:hover {
      background-color: #de3137; }
  .last-winners .btn {
    margin-top: 30px; }

.winners {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  margin-bottom: 30px; }
  .winners__winner {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -ms-flex-wrap: wrap;
        flex-wrap: wrap;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    text-align: center; }
    @media (max-width: 768px) {
      .winners__winner {
        margin-bottom: 20px; } }
  .winners__avatar {
    width: 100%;
    height: 150px;
    margin-bottom: 15px;
    background-color: #424242; }
  .winners__text {
    width: 200px; }
  .winners__name {
    display: block;
    margin-bottom: 10px;
    font-size: 14px;
    color: #b4b4b4; }
  .winners__gain {
    font-family: SFUIBold;
    font-size: 14px; }
  .winners__game {
    display: block;
    font-size: 14px;
    color: #f9515e;
    text-decoration: underline; }

.popular-games {
  padding: 30px 0; }
  .popular-games .header-row {
    margin-bottom: 20px; }
  .popular-games__wrapper {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
        flex-wrap: wrap;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center; }
  .popular-games__header {
    font-family: SFUIHeavy;
    font-size: 24px;
    line-height: 24px; }
    @media (max-width: 768px) {
      .popular-games__header {
        font-size: 18px; } }
  .popular-games__button {
    padding: 18px;
    margin-top: 20px;
    margin-bottom: 20px;
    border: 2px solid #005fdc;
    background-color: transparent; }
    .popular-games__button:hover {
      border-color: #0257c8;
      background-color: #0257c8; }
  .popular-games__more-button {
    display: block;
    margin: 0 auto;
    padding: 20px;
    margin-top: 20px;
    margin-bottom: 20px;
    border: 2px solid #005fdc;
    background-color: transparent;
    font-family: SFUIBold;
    font-size: 16px;
    -webkit-transition: 0.1s;
    transition: 0.1s;
    cursor: pointer; }
    .popular-games__more-button:hover {
      border-color: #0257c8;
      background-color: #0257c8; }
  .popular-games .btn {
    margin-top: 10px; }

.games-preview {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  width: 100%; }
  .games-preview__item {
    width: 100%;
    height: 155px;
    margin-right: 20px;
    margin-bottom: 20px;
    background-color: #313131; }
    .games-preview__item:nth-of-type(4n) {
      margin-right: 0; }

.deposites {
  padding: 60px 0; }
  .deposites__wrapper {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center; }
  @media (max-width: 768px) {
    .deposites__content {
      text-align: center; } }
  .deposites__header {
    margin-bottom: 30px;
    font-size: 40px;
    line-height: 60px; }
    @media (max-width: 1200px) {
      .deposites__header {
        font-size: 30px; } }
    @media (max-width: 768px) {
      .deposites__header {
        font-size: 1.2em;
        line-height: 1.5; } }
  .deposites__button {
    display: block;
    width: 280px;
    padding: 25px;
    background-color: #ed383f;
    font-family: SFUIBold;
    font-size: 18px;
    text-align: center; }
/* ... */

